Fixed Contrast more

--- a/index.css
+++ b/index.css
@@ -146,7 +146,7 @@ nav li > a:hover{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: hsla(209, 100%, 36%, .6);
+    background-color: hsla(209, 100%, 15%, .8);
 }
 
 .banner img{
